FIX z-index header

--- a/css/style.css
+++ b/css/style.css
@@ -279,6 +279,7 @@ button{
     position: fixed;
     top: 0;
     padding: 0 20px;
+    z-index: 99;
 }
 
 .upgrade{
@@ -300,13 +301,6 @@ button{
     flex-wrap: wrap;
     width: 100%;
     margin-bottom: 40px;
-}
-
-.card-container img{
-    display: block;
-    width: 100%;
-    height: auto;
-    aspect-ratio: 1/1;
 }
 
 .main-content .title-wrapper{
@@ -333,6 +327,13 @@ button{
 .card .image{
     width: 100%;
     aspect-ratio: 1/1;
+}
+
+
+.card img{
+    display: block;
+    width: 100%;
+    height: auto;
 }
 
 .card .description{
